# FitnessFormAI

./: README.md  app.py  main.py  models.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
.cache/matplotlib/: fontlist-v390.json
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
documentation/: ARCHITECTURE.md  IMPLEMENTATION.md  IMPLEMENTATION_DETAILS.md
static/css/: style.css
static/js/: app.js  canvas.js
templates/: index.html
utils/: classifier.py  pose_analyzer.py
