[project]
name = "repl-nix-fitnessformai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.0.0",
    "flask>=2.0.0",
    "flask-sqlalchemy>=3.1.1",
    "mediapipe>=0.8.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "psycopg2-binary>=2.9.10",
    "python-engineio>=4.0.0",
    "eventlet>=0.30.0",
    "python-socketio>=5.0.0",
    "gunicorn>=20.1.0",
]
